# devcontainer

${PROJECT_NAME}/: pyproject.toml
${PROJECT_NAME}/tests/: test_${project_name}.py
.devcontainer/: .env_db  Dockerfile_app  Dockerfile_db  devcontainer.json  docker-compose.yml
.devcontainer/app/: Dockerfile-app  Dockerfile_app
.devcontainer/app/create_app/: .env  create-app.sh
.devcontainer/app/create_app/django_3.2/: settings.py
.devcontainer/app/create_app/django_3.2/accounts/: admin.py  forms.py  models.py
.devcontainer/app/setup_app/: setup-app.sh
.devcontainer/create_app/: base.html  create-app.sh  settings.py
.devcontainer/db/: .env_db  Dockerfile-db
.devcontainer/setup_app/: .gitignore  setup-app.sh
.devcontainer/setup_project/: .env  setup.sh
argent/: pyproject.toml
argent/tests/: test_argent.py
your_project/: pyproject.toml
your_project/tests/: test_your_project.py
your_project_name/: pyproject.toml
your_project_name/tests/: test_your_project_name.py
