[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = ""
authors = ["YourGitName <your_git_email@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "3.2.13"
environs = {version = "9.5.0", extras = ["django"]}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
